fix: consistent arrow space on tablet

--- a/src/templates/module_30_tilecontainer/styles.less
+++ b/src/templates/module_30_tilecontainer/styles.less
@@ -139,7 +139,7 @@
                 }
 
                 .icon {
-                    left: -20px;
+                    left: -35px;
                 }
             }
 
